doc: -fixed overlapping boxes

--- a/doc/css/style.css
+++ b/doc/css/style.css
@@ -59,7 +59,8 @@ h4 {
 	border:1px solid black;
 	padding:5px;
 	margin:20px; 
-	font-family:Courier; 
+	font-family:Courier;
+	width:710px;
 }
 
 .inline-code { 
